@@ -1,5 +1,15 @@
 2006-11-13  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/cipher.c, src/munged/mac.c, src/munged/md.c:
+	  Added log_msg()s at LOG_DEBUG to investigate infrequent "Unable to
+	  encrypt credential" errors when using the blowfish cipher with
+	  Libgcrypt.  The bug is generated by gcry_cipher_setkey() returning a
+	  "Weak encryption key" error string.  Googling around turns up a post
+	  by Christian Grothoff saying "This is a (forgotten) problem with
+	  libgcrypt.  The crypto library insists on checking that the key for
+	  the blowfish cypher is 'secure'."  Krista Bennett then reports that
+	  "The libgcrypt weak encryption key bug has been fixed in CVS."
+
 	* config/x_ac_path_openssl.m4:
 	  Added /usr/sfw to _x_ac_path_openssl_dirs for Solaris.
 
